@@ -4,60 +4,70 @@ require File.expand_path(File.join(File.dirname(__FILE__), "test_helper"))
 
 describe BinData::Section do
   it "transforms data byte at a time" do
-    class XorTransform < BinData::IO::Transform
-      def initialize(xor)
-        super()
-        @xor = xor
-      end
+    require 'bindata/transform/xor'
 
-      def read(n)
-        chain_read(n).bytes.map { |byte| (byte ^ @xor).chr }.join
-      end
-
-      def write(data)
-        chain_write(data.bytes.map { |byte| (byte ^ @xor).chr }.join)
-      end
-    end
-
-    obj = BinData::Section.new(transform: -> { XorTransform.new(0xff) },
+    obj = BinData::Section.new(transform: -> { BinData::Transform::Xor.new(0xff) },
                                type: [:string, read_length: 5])
 
     _(obj.read("\x97\x9A\x93\x93\x90")).must_equal "hello"
   end
 
-  it "expands data" do
-    class ZlibTransform < BinData::IO::Transform
-      require 'zlib'
+  begin
+    require 'brotli'
+    it "transform brotli" do
+      require 'bindata/transform/brotli'
 
-      transform_changes_stream_length!
+      class BrotliRecord < BinData::Record
+        int32le :len, value: -> { s.num_bytes }
+        section :s, transform: -> { BinData::Transform::Brotli.new(len) } do
+          int32le :str_len, value: -> { str.length }
+          string :str, read_length: :str_len
 
-      def initialize(read_length)
-        super()
-        @length = read_length
+        end
       end
 
-      def read(n)
-        @read ||= Zlib::Inflate.inflate(chain_read(@length))
-        @read.slice!(0...n)
-      end
+      obj = BrotliRecord.new
+      data = "highly compressable" * 100
+      obj.s.str = data
+      _(obj.len).must_be :<, (data.length / 10)
 
-      def write(data)
-        @write ||= create_empty_binary_string
-        @write << data
-      end
-
-      def after_read_transform
-        raise IOError, "didn't read all data" unless @read.empty?
-      end
-
-      def after_write_transform
-        chain_write(Zlib::Deflate.deflate(@write))
-      end
+      str =  obj.to_binary_s
+      obj = BrotliRecord.read(str)
+      _(obj.s.str).must_equal data
     end
+  rescue LoadError; end
+
+  begin
+    require 'extlz4'
+    it "transform lz4" do
+      require 'bindata/transform/lz4'
+
+      class LZ4Record < BinData::Record
+        int32le :len, value: -> { s.num_bytes }
+        section :s, transform: -> { BinData::Transform::LZ4.new(len) } do
+          int32le :str_len, value: -> { str.length }
+          string :str, read_length: :str_len
+
+        end
+      end
+
+      obj = LZ4Record.new
+      data = "highly compressable" * 100
+      obj.s.str = data
+      _(obj.len).must_be :<, (data.length / 10)
+
+      str =  obj.to_binary_s
+      obj = LZ4Record.read(str)
+      _(obj.s.str).must_equal data
+    end
+  rescue LoadError; end
+
+  it "transform zlib" do
+    require 'bindata/transform/zlib'
 
     class ZlibRecord < BinData::Record
       int32le :len, value: -> { s.num_bytes }
-      section :s, transform: -> { ZlibTransform.new(len) } do
+      section :s, transform: -> { BinData::Transform::Zlib.new(len) } do
         int32le :str_len, value: -> { str.length }
         string :str, read_length: :str_len
 
@@ -73,4 +83,29 @@ describe BinData::Section do
     obj = ZlibRecord.read(str)
     _(obj.s.str).must_equal data
   end
+
+  begin
+    require 'zstd-ruby'
+    it "transform zstd" do
+      require 'bindata/transform/zstd'
+
+      class ZstdRecord < BinData::Record
+        int32le :len, value: -> { s.num_bytes }
+        section :s, transform: -> { BinData::Transform::Zstd.new(len) } do
+          int32le :str_len, value: -> { str.length }
+          string :str, read_length: :str_len
+
+        end
+      end
+
+      obj = ZstdRecord.new
+      data = "highly compressable" * 100
+      obj.s.str = data
+      _(obj.len).must_be :<, (data.length / 10)
+
+      str =  obj.to_binary_s
+      obj = ZstdRecord.read(str)
+      _(obj.s.str).must_equal data
+    end
+  rescue LoadError; end
 end
