@@ -7,6 +7,7 @@
 * Allow for nested tracing.
 * Skip :until_valid is now fast for :asserted_value.
 * Added Section - a way to transform the data stream.
+* Added transforms for brotli, lz4, xor, zlib, zstd.
 
 == Version 2.4.15 (2023-02-07)
 
